Change Log for OpenXava project
===============================

- IThemeProvider to define your own logic to choose the current theme.
- New method assertLabel(int sectionIndex, String expectedLabel) in ModuleTestBase.
- View.setLabelId() allows to change the label of sections and groups.
- Getting started guide simplified and adapted to use OpenXava Studio.  
- Building workspace time for Eclipse optimized.
- New attribute filter in @DescriptionsList to use an IFilter like the ones used by @Tab.
- New attribute filter in <descriptions-list> of XML components to use an IFilter.
- ENTER to move to next field with enterMovesToNextField=true in xava.properties.
- Lesson 5 of course upgraded to latest features.
- Import data from list supports importing references, not just plain properties.
- Fix: Combining inheritance, generic types and @ReferenceView fails.
- Detail mode of InvoiceDemo improved.
- Creation confirmation messages include field values if they are generated on saving. 
- Fix: assertTotalInCollection() in tests does not work for MONEY properties.
- @DefaultValueCalculator does not work for total properties of a collection if @View is specified.
- Total properties allowed in an @ElementCollection of a base class.
- Searching by collection content from list mode allowing qualified collection properties in @Tab.
- Automatic label for reference member in list improved.
- Fix: Horizontal scrollbar in list mode with large list configuration descriptions.
- Russian translation improved including labels for latest releases.

OpenXava 6.3.2 (2020-5-12)
--------------------------
- New initialModule property in naviox.properties to start with your own module instead of First Steps.
- New IProcedure functional interface that does not receive or return any value to be use in lambdas.
- Instructions to install Java and Eclipse improved in Getting Started guide.
- Application chapter of reference guide improved.