@@ -18,7 +18,7 @@
       | <strong>Aplicación</strong> | <a class="wiki_link" href="customizing_es.html">Personalización</a>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Aplicacion">Aplicación</a></div>
         <div style="margin-left: 2em;"><a href="#Aplicacion-Un+modulo+tipico">Un
             módulo típico</a></div>
