@@ -18,7 +18,7 @@
           XML</a> | <strong><span class="wiki_link">6.Aspectos XML</span></strong></span>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Cap%C3%ADtulo+6:+Aspectos+XML+%28cl%C3%A1sico%29">Capítulo
             6: Aspectos XML (clásico)</a></div>
         <div style="margin-left: 2em;"><a href="#Cap%C3%ADtulo+6:+Aspectos+XML+%28cl%C3%A1sico%29-Introducci%C3%B3n+a+AOP">Introducción
