@@ -30,7 +30,7 @@
         Anotaciones</a>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Leccion-5-Logica-de-negocio-basica">Lección
             5: Lógica de negocio básica</a></div>
         <div style="margin-left: 2em;"><a href="#Propiedades-calculadas">Propiedades
