@@ -22,7 +22,7 @@
         href="application_es.html">Aplicación</a> | <a class="wiki_link" href="customizing_es.html">Personalización</a>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Controladores">Controladores</a></div>
         <div style="margin-left: 2em;"><a href="#Controladores-Variable%20de%20entorno">Variable
             de entorno</a></div>
