@@ -18,7 +18,7 @@
         </span>
           Estilo visual personalizado</h1>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Estilo%20visual%20personalizado">Estilo
             visual personalizado</a></div>
         <div style="margin-left: 2em;"><a href="#definir-tu-propio-estilo">Definir
