@@ -18,7 +18,7 @@
       | <a class="wiki_link" href="application_es.html">Aplicación</a> | <strong>Personalización</strong>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Personalizacion">Personalización</a></div>
         <div style="margin-left: 2em;"><a href="#Personalizacion-Editores">Editores</a></div>
         <div style="margin-left: 3em;"><a href="#Personalizacion-Editores-Configuracion+de+editores">Configuración
