@@ -15,7 +15,7 @@
         </span>
         EJB3 JPA</h1>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#EJB3%20JPA">EJB3 JPA</a></div>
         <div style="margin-left: 2em;"><a href="#EJB3%20JPA-Configurar%20nuestra%20aplicacion%20para%20que%20funcione%20con%20EJB3">Configurar
             nuestra aplicacion para que funcione con EJB3</a></div>
