@@ -11,7 +11,7 @@
               </a> </span> / <a href="index_es.html">documentación</a> / </span>
         Ayuda para el usuario</h1>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Ayuda%20para%20el%20usuario">Ayuda
             para el usuario</a></div>
         <div style="margin-left: 2em;"><a href="#Ayuda%20para%20el%20usuario-Modo%20lista">Modo
