@@ -21,7 +21,7 @@
       
         ¿Cómo ...</h1>
       <div id="toc">
-        <h1 class="nopad">Table of Contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Como-evitar-que-se-pueda-modificar-cierto-campo-en-una-vista">¿Cómo
             evitar que se pueda modificar cierto campo en una vista?</a></div>
         <div style="margin-left: 1em;"><a href="#Como-usar-una-vista-diferente-para-crear-y-para-actualizar">¿Cómo
