@@ -19,7 +19,7 @@
       <em><span style="font-size: 120%;">Esta página está pendiente de traducir
           a español. ¿Sabés inglés? Colabora traduciéndola tu mismo</span></em><br>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Internacionalizaci%C3%B3n+%28i18n%29">Internacionalización
             (i18n)</a></div>
         <div style="margin-left: 2em;"><a href="#Internacionalizaci%C3%B3n+%28i18n%29-Labels">Labels</a></div>
