@@ -7,12 +7,10 @@
   <body>
     <div class="wiki" id="content_view" style="display: block;">
       <h1> <span id="breadcrumbs"> <span id="openxava"> <a href="https://www.openxava.org/">
-              <span>o</span>pen<span>x</span>ava </a> </span> / <span
-
-            id="doc">documentation</span> </span> </h1>
+              <span>o</span>pen<span>x</span>ava </a> </span> / <span id="doc">documentation</span>
+        </span> </h1>
       <hr> <strong>English</strong> | <a class="wiki_link" href="index_es.html">Español</a>
-      | <a class="wiki_link" href="index_fr.html">Français</a> | <a class="wiki_link"
-
+      | <a class="wiki_link" href="index_fr.html">Français</a> | <a class="wiki_link"
         href="index_zh_cn.html">中文</a> | <a class="wiki_link" href="index_ru.html">Русский</a>
       | <a class="wiki_link" href="../apidocs/index.html">API</a>
       <hr>
@@ -122,8 +120,7 @@
         <li><a class="wiki_link" href="wtp_en.html">Eclipse Web Tools Platform</a></li>
         <li><a class="wiki_link" href="jboss_en.html">JBoss</a></li>
         <li><a class="wiki_link" href="websphere_en.html">WebSphere</a></li>
-        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.be/2014/01/how-to-cloudbees-minuteproject-4.html"
-
+        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.be/2014/01/how-to-cloudbees-minuteproject-4.html"
             rel="nofollow">Deploy on Cloudbees</a></li>
         <li><a class="wiki_link" href="ant-from-eclipse_en.html">Executing Ant
             tasks from Eclipse</a></li>
@@ -131,15 +128,10 @@
         <li><a class="wiki_link" href="java14_en.html">Java 1.4</a></li>
         <li><a class="wiki_link" href="maven-setup_en.html">Configuration for
             Maven</a></li>
-        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.com/2011/12/adding-ehcache-to-openxava-application.html"
-
+        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.com/2011/12/adding-ehcache-to-openxava-application.html"
             rel="nofollow">Enable Ehcache for OpenXava</a></li>
-        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.com/2012/02/adding-spring-security-to-openxava.html"
-
+        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.com/2012/02/adding-spring-security-to-openxava.html"
             rel="nofollow">Enable Spring security for OpenXava</a></li>
-        <li><a class="wiki_link_ext" href="http://minuteproject.blogspot.be/2014/01/how-to-cloudbees-minuteproject-4.html"
-
-            rel="nofollow">Deploy on Cloudbees</a></li>
       </ul>
       <h2 id="toc6"><a name="OpenXava documentation-FAQs"></a>FAQs</h2>
       <ul>
