@@ -17,7 +17,7 @@
         </span>
         IntelliJ IDEA con OpenXava</h1>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#intellij-idea-con-openxava">IntelliJ
             IDEA con OpenXava</a></div>
         <div style="margin-left: 2em;"><a href="#crear-proyecto-openxava-nuevo">Crear
