@@ -24,7 +24,7 @@
       | <a class="wiki_link" href="annotations_es.html">C. Anotaciones</a>
       <hr> 
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Ap%C3%A9ndice+B:+Java+Persistence+API">Apéndice
             B: Java Persistence API</a></div>
         <div style="margin-left: 2em;"><a href="#Ap%C3%A9ndice+B:+Java+Persistence+API-Anotaciones+JPA">Anotaciones
