@@ -18,7 +18,7 @@
       | <a class="wiki_link" href="aspects-xml_es.html">6.Aspectos XML</a>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Cap%C3%ADtulo+2:+Modelo+XML+%28cl%C3%A1sico%29">Capítulo
             2: Modelo XML (clásico)</a></div>
         <div style="margin-left: 2em;"><a href="#Cap%C3%ADtulo+2:+Modelo+XML+%28cl%C3%A1sico%29-Implementaci%C3%B3n+en+Java">Implementación
