@@ -21,7 +21,7 @@
         href="customizing_es.html">Personalización</a>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Modelo">Modelo</a></div>
         <div style="margin-left: 2em;"><a href="#Modelo-Componente%20de%20negocio">Componente
             de negocio</a></div>
