@@ -15,7 +15,7 @@
         </span>
         Aplicaciones multiesquema</h1>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Aplicaciones%20multiesquema">Aplicaciones
             multiesquema</a></div>
         <div style="margin-left: 2em;"><a href="#Aplicaciones%20multiesquema-Aplicaciones%20multiesquema">Aplicaciones
