@@ -15,7 +15,7 @@
         </span>
         Multiempresa/multimunicipio</h1>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Multiempresa/multimunicipio">Multiempresa/multimunicipio</a></div>
         <div style="margin-left: 2em;"><a href="#Multiempresa/multimunicipio-Crear+una+nueva+organizaci%C3%B3n">Crear
             una nueva organización</a></div>
