@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="wiki" id="content_view" style="display: block;">
-<div id="toc"><h1 class="nopad">Table of Contents</h1><div style="margin-left: 2em;"><a href="#x-Crear un proyecto nuevo">Crear un proyecto nuevo</a></div>
+<div id="toc"><h1 class="nopad">Tabla de contenidos</h1><div style="margin-left: 2em;"><a href="#x-Crear un proyecto nuevo">Crear un proyecto nuevo</a></div>
 <div style="margin-left: 2em;"><a href="#x-Configurar base de datos">Configurar base de datos</a></div>
 <div style="margin-left: 2em;"><a href="#x-Nuestro primer componente de negocio">Nuestro primer componente de negocio</a></div>
 <div style="margin-left: 2em;"><a href="#x-La tabla">La tabla</a></div>
