@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="wiki" id="content_view" style="display: block;">
-<div id="toc"><h1 class="nopad">Table of Contents</h1><div style="margin-left: 1em;"><a href="#Configuración del entorno">Configuración del entorno</a></div>
+<div id="toc"><h1 class="nopad">Tabla de contenidos</h1><div style="margin-left: 1em;"><a href="#Configuración del entorno">Configuración del entorno</a></div>
 <div style="margin-left: 2em;"><a href="#Configuración del entorno-Arrancar Eclipse">Arrancar Eclipse</a></div>
 <div style="margin-left: 2em;"><a href="#Configuración del entorno-Tareas definidas en el fichero build.xml">Tareas definidas en el fichero build.xml</a></div>
 <div style="margin-left: 2em;"><a href="#Configuración del entorno-Ejecución de la tarea por omisión de build.xml">Ejecución de la tarea por omisión de build.xml</a></div>
