@@ -18,7 +18,7 @@
         </span>
         Navegación entre módulos</h1>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#toc0">Navegación entre módulos</a></div>
         <div style="margin-left: 2em;"><a href="#toc1">Menús</a></div>
         <div style="margin-left: 2em;"><a href="#toc2">Carpetas</a></div>
