@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="wiki" id="content_view" style="display: block;">
-<div id="toc"><h1 class="nopad">Table of Contents</h1><div style="margin-left: 1em;"><a href="#Visión general">Visión general</a></div>
+<div id="toc"><h1 class="nopad">Tabla de contenidos</h1><div style="margin-left: 1em;"><a href="#Visión general">Visión general</a></div>
 <div style="margin-left: 2em;"><a href="#Visión general-Presentación">Presentación</a></div>
 <div style="margin-left: 2em;"><a href="#Visión general-Componente de negocio">Componente de negocio</a></div>
 <div style="margin-left: 2em;"><a href="#Visión general-Controladores">Controladores</a></div>
