@@ -15,7 +15,7 @@
         </span>
         Guía para la migración mental de OX2 a OX3</h1>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Gu%C3%ADa+para+la+migraci%C3%B3n+mental+de+OX2+a+OX3">Guía
             para la migración mental de OX2 a OX3</a></div>
         <div style="margin-left: 2em;"><a href="#Gu%C3%ADa+para+la+migraci%C3%B3n+mental+de+OX2+a+OX3-Definici%C3%B3n+de+componentes">Definición
