@@ -25,7 +25,7 @@
         class="wiki_link" href="annotations_es.html">C. Anotaciones</a>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Ap%C3%A9ndice+A:+Arquitectura+y+filosof%C3%ADa">Apéndice
             A: Arquitectura y filosofía</a></div>
         <div style="margin-left: 2em;"><a href="#Ap%C3%A9ndice+A:+Arquitectura+y+filosof%C3%ADa-Los+conceptos">Los
