@@ -17,7 +17,7 @@
         </span>
         Problemas</h1>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Problemas">Problemas</a></div>
         <div style="margin-left: 2em;"><a href="#Problemas-Liferay+cierra+la+sesi%C3%B3n+despu%C3%A9s+de+30+minutos+de+trabajo">Liferay
             cierra la sesión después de 30 minutos de trabajo</a></div>
