@@ -25,7 +25,7 @@
         Anotaciones</a>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Leccion-7-Refinar-el-comportamiento-predefinido">Lección
             7: Refinar el comportamiento predefinido</a></div>
         <div style="margin-left: 2em;"><a href="#Acciones-personalizadas">Acciones
