@@ -16,7 +16,7 @@
         Seguridad y gestión de usuarios</h1>
 
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Seguridad+y+gestion+de+usuarios">Seguridad
             y gestión de usuarios</a></div>
         <div style="margin-left: 2em;"><a href="#Seguridad+y+gestion+de+usuarios-Gestion+de+usuarios">Gestión
