@@ -19,7 +19,7 @@
         href="customizing_es.html">Personalización</a>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Datos%20tabulares">Datos
             tabulares</a></div>
         <div style="margin-left: 2em;"><a href="#Datos%20tabulares-Propiedades%20iniciales%20y%20resaltar%20filas">Propiedades
