@@ -29,7 +29,7 @@
         Anotaciones</a>
       <hr>
             <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
 
         <div style="margin-left: 1em;"><a href="#Leccion+3:+Pruebas+automaticas">Lección
 
