@@ -26,7 +26,7 @@
         Anotaciones</a>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Leccion-6-Validacion-avanzada">Lección
             6: Validación avanzada</a></div>
         <div style="margin-left: 2em;"><a href="#Alternativas-de-validacion">Alternativas
