@@ -20,7 +20,7 @@
           XML</a></span>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Cap%C3%ADtulo+3:+Vista+XML+%28cl%C3%A1sico%29">Capítulo
             3: Vista XML (clásico)</a></div>
         <div style="margin-left: 2em;"><a href="#Cap%C3%ADtulo+3:+Vista+XML+%28cl%C3%A1sico%29-Disposici%C3%B3n">Disposición</a></div>
