@@ -20,7 +20,7 @@
         href="customizing_es.html">Personalización</a>
       <hr>
       <div id="toc">
-        <h1 class="nopad">Table of contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Vista">Vista</a></div>
         <div style="margin-left: 2em;"><a href="#Vista-Disposicion">Disposición</a></div>
         <div style="margin-left: 3em;"><a href="#Vista-Disposicion-Grupos">Grupos</a></div>
