@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="wiki" id="content_view" style="display: block;">
-<div id="toc"><h1 class="nopad">Table of Contents</h1><div style="margin-left: 1em;"><a href="#WebSphere EJB2">WebSphere EJB2</a></div>
+<div id="toc"><h1 class="nopad">Tabla de contenidos</h1><div style="margin-left: 1em;"><a href="#WebSphere EJB2">WebSphere EJB2</a></div>
 <div style="margin-left: 2em;"><a href="#WebSphere EJB2-Crear una aplicación J2EE compatible con Websphere">Crear una aplicación J2EE compatible con Websphere</a></div>
 <div style="margin-left: 2em;"><a href="#WebSphere EJB2-Instalar Websphere">Instalar Websphere</a></div>
 <div style="margin-left: 2em;"><a href="#WebSphere EJB2-Configurar origenes de datos">Configurar origenes de datos</a></div>
