@@ -17,7 +17,7 @@
         </span>
         Eclipse Web Tools Platform</h1>
       <div id="toc">
-        <h1 class="nopad">Table of Contents</h1>
+        <h1 class="nopad">Tabla de contenidos</h1>
         <div style="margin-left: 1em;"><a href="#Eclipse%20Web%20Tools%20Platform">Eclipse
             Web Tools Platform</a></div>
         <div style="margin-left: 2em;"><a href="#Eclipse+Web+Tools+Platform-A%C3%B1adir+Tomcat+a+nuestro+Eclipse">Añadir
